# crypto_trading_system

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/common/: logger.hpp  macros.hpp  memory_pool.hpp  thread_utils.hpp  time_utils.hpp
src/data/: BinanceWebSocketClient.hpp  BookSnapshot.hpp  LatencyLogger.hpp  OrderBook.cpp  OrderBook.hpp  lockfree_queue.hpp
tests/: CMakeLists.txt  test_orderbook.cpp
